--- a/DBAChecks/Properties/Resources.resx
+++ b/DBAChecks/Properties/Resources.resx
@@ -922,48 +922,6 @@ EXEC sp_executesql @SQL</value>
   <data name="SQLTraceFlags" xml:space="preserve">
     <value>DBCC TRACESTATUS(-1)</value>
   </data>
-  <data name="SQLProcStats" xml:space="preserve">
-    <value>IF OBJECT_ID('sys.dm_exec_procedure_stats') IS NOT NULL
-BEGIN
-	IF SERVERPROPERTY('EditionID') =1674378470
-	BEGIN
-		--azure
-		SELECT object_id,
-			   database_id,
-			   ISNULL(OBJECT_NAME(object_id, database_id),'') object_name,
-			   total_worker_time,
-			   total_elapsed_time,
-			   total_logical_reads,
-			   total_logical_writes,
-			   total_physical_reads,
-			   cached_time,
-			   execution_count,
-			   GETUTCDATE() AS current_time_utc,
-			   type,
-			   OBJECT_SCHEMA_NAME(object_id, database_id) AS schema_name
-		FROM sys.dm_exec_procedure_stats
-		WHERE database_id = DB_ID()
-	END
-	ELSE
-	BEGIN
-		SELECT object_id,
-			   database_id,
-			   ISNULL(OBJECT_NAME(object_id, database_id),'') object_name,
-			   total_worker_time,
-			   total_elapsed_time,
-			   total_logical_reads,
-			   total_logical_writes,
-			   total_physical_reads,
-			   cached_time,
-			   execution_count,
-			   GETUTCDATE() AS current_time_utc,
-			   type,
-			   OBJECT_SCHEMA_NAME(object_id, database_id) AS schema_name
-		FROM sys.dm_exec_procedure_stats
-		WHERE database_id &lt;&gt; 32767;
-	END
-END</value>
-  </data>
   <data name="SQLCPU" xml:space="preserve">
     <value>IF OBJECT_ID('sys.dm_db_resource_stats') IS NOT NULL
 BEGIN
@@ -991,26 +949,6 @@ BEGIN
 				WHERE ring_buffer_type = N'RING_BUFFER_SCHEDULER_MONITOR' 
 				AND record LIKE N'%&lt;SystemHealth&gt;%') AS x) AS y 
 	ORDER BY record_id DESC OPTION (RECOMPILE);
-END</value>
-  </data>
-  <data name="SQLFunctionStats" xml:space="preserve">
-    <value>IF OBJECT_ID('sys.dm_exec_function_stats') IS NOT NULL
-BEGIN
-	SELECT object_id,
-		   database_id,
-		   ISNULL(OBJECT_NAME(object_id, database_id),'') object_name,
-		   total_worker_time,
-		   total_elapsed_time,
-		   total_logical_reads,
-		   total_logical_writes,
-		   total_physical_reads,
-		   cached_time,
-		   execution_count,
-		   GETUTCDATE() AS current_time_utc,
-		   type,
-		   OBJECT_SCHEMA_NAME(object_id,database_id) schema_name
-	FROM sys.dm_exec_function_stats
-	WHERE database_id &lt;&gt; 32767;
 END</value>
   </data>
   <data name="SQLBlockingSnapshot" xml:space="preserve">
@@ -1532,5 +1470,72 @@ END</value>
 	category_id,
 	performance_condition
 FROM msdb..sysalerts</value>
+  </data>
+  <data name="SQLObjectExecutionStats" xml:space="preserve">
+    <value>DECLARE @SQL NVARCHAR(MAX)
+DECLARE @IsAzure BIT
+SELECT @IsAzure = CASE WHEN SERVERPROPERTY('EditionID') =1674378470 THEN CAST(1 AS BIT) ELSE CAST(0 AS BIT) END
+IF OBJECT_ID('sys.dm_exec_procedure_stats') IS NOT NULL
+BEGIN
+	SET @SQL = N'
+			SELECT object_id,
+				   database_id,
+				   ISNULL(OBJECT_NAME(object_id, database_id),'''') object_name,
+				   total_worker_time,
+				   total_elapsed_time,
+				   total_logical_reads,
+				   total_logical_writes,
+				   total_physical_reads,
+				   cached_time,
+				   execution_count,
+				   GETUTCDATE() AS current_time_utc,
+				   type,
+				   ISNULL(OBJECT_SCHEMA_NAME(object_id, database_id),'''') AS schema_name
+			FROM sys.dm_exec_procedure_stats
+			WHERE database_id ' + CASE WHEN @IsAzure=1 THEN '= DB_ID()' ELSE '&lt;&gt; 32767' END + '
+			'
+END
+IF OBJECT_ID('sys.dm_exec_function_stats') IS NOT NULL
+BEGIN
+	SET @SQL = @SQL + 'UNION ALL
+		SELECT object_id,
+		   database_id,
+		   ISNULL(OBJECT_NAME(object_id, database_id),'''') object_name,
+		   total_worker_time,
+		   total_elapsed_time,
+		   total_logical_reads,
+		   total_logical_writes,
+		   total_physical_reads,
+		   cached_time,
+		   execution_count,
+		   GETUTCDATE() AS current_time_utc,
+		   type,
+		   ISNULL(OBJECT_SCHEMA_NAME(object_id,database_id),'''') schema_name
+	FROM sys.dm_exec_function_stats
+	WHERE database_id ' + CASE WHEN @IsAzure=1 THEN '= DB_ID()' ELSE '&lt;&gt; 32767' END + '
+	'
+END
+IF OBJECT_ID('sys.dm_exec_function_stats') IS NOT NULL
+BEGIN
+	SET @SQL = @SQL + 'UNION ALL
+		SELECT object_id,
+		   database_id,
+		   ISNULL(OBJECT_NAME(object_id, database_id),'''') object_name,
+		   total_worker_time,
+		   total_elapsed_time,
+		   total_logical_reads,
+		   total_logical_writes,
+		   total_physical_reads,
+		   cached_time,
+		   execution_count,
+		   GETUTCDATE() AS current_time_utc,
+		   type,
+		   ISNULL(OBJECT_SCHEMA_NAME(object_id,database_id),'''') schema_name
+	FROM sys.dm_exec_trigger_stats
+	WHERE database_id ' + CASE WHEN @IsAzure=1 THEN '= DB_ID()' ELSE '&lt;&gt; 32767' END + '
+	'
+END
+PRINT @SQL
+EXEC sp_executesql @SQL</value>
   </data>
 </root>
