Added ServerPrincipals and ServerRoleMembers

--- a/DBAChecks/Properties/Resources.resx
+++ b/DBAChecks/Properties/Resources.resx
@@ -1538,4 +1538,29 @@ END
 PRINT @SQL
 EXEC sp_executesql @SQL</value>
   </data>
+  <data name="SQLServerPrincipals" xml:space="preserve">
+    <value>DECLARE @SQL NVARCHAR(MAX)
+SET @SQL = N'
+SELECT name,
+       principal_id,
+       sid,
+       type,
+       type_desc,
+       is_disabled,
+       create_date,
+       modify_date,
+       default_database_name,
+       default_language_name,
+       credential_id,
+	   ' + CASE WHEN COLUMNPROPERTY(OBJECT_ID('sys.server_principals'),'owning_principal_id','ColumnID') IS NULL THEN 'CAST(NULL AS INT) as owning_principal_id,' ELSE 'owning_principal_id,' END + '
+	   ' + CASE WHEN COLUMNPROPERTY(OBJECT_ID('sys.server_principals'),'is_fixed_role','ColumnID') IS NULL THEN 'CAST(NULL AS BIT) as is_fixed_role' ELSE 'is_fixed_role' END + '
+FROM sys.server_principals'
+
+exec sp_executesql @SQL</value>
+  </data>
+  <data name="SQLServerRoleMembers" xml:space="preserve">
+    <value>SELECT role_principal_id,
+       member_principal_id
+FROM sys.server_role_members</value>
+  </data>
 </root>
