--- a/DBAChecks/Properties/Resources.resx
+++ b/DBAChecks/Properties/Resources.resx
@@ -1553,7 +1553,7 @@ SELECT name,
        default_language_name,
        credential_id,
 	   ' + CASE WHEN COLUMNPROPERTY(OBJECT_ID('sys.server_principals'),'owning_principal_id','ColumnID') IS NULL THEN 'CAST(NULL AS INT) as owning_principal_id,' ELSE 'owning_principal_id,' END + '
-	   ' + CASE WHEN COLUMNPROPERTY(OBJECT_ID('sys.server_principals'),'is_fixed_role','ColumnID') IS NULL THEN 'CAST(NULL AS BIT) as is_fixed_role' ELSE 'is_fixed_role' END + '
+	   ' + CASE WHEN COLUMNPROPERTY(OBJECT_ID('sys.server_principals'),'is_fixed_role','ColumnID') IS NULL THEN 'CASE WHEN type=''R'' AND name IN(''sysadmin'',''securityadmin'',''serveradmin'',''setupadmin'',''processadmin'',''diskadmin'',''dbcreator'',''bulkadmin'') THEN CAST(1 as BIT) ELSE CAST(0 as BIT) END as is_fixed_role' ELSE 'is_fixed_role' END + '
 FROM sys.server_principals'
 
 exec sp_executesql @SQL</value>
