--- a/DBAChecksServiceConfig/Properties/Resources.resx
+++ b/DBAChecksServiceConfig/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="ASX_Copy_blue_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ASX_Copy_blue_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Connect_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Connect_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
