--- a/DBAChecks/Properties/Resources.resx
+++ b/DBAChecks/Properties/Resources.resx
@@ -1515,7 +1515,7 @@ BEGIN
 	WHERE database_id ' + CASE WHEN @IsAzure=1 THEN '= DB_ID()' ELSE '&lt;&gt; 32767' END + '
 	'
 END
-IF OBJECT_ID('sys.dm_exec_function_stats') IS NOT NULL
+IF OBJECT_ID('sys.dm_exec_trigger_stats') IS NOT NULL
 BEGIN
 	SET @SQL = @SQL + 'UNION ALL
 		SELECT object_id,
