--- a/DBAChecksGUI/Drives/DriveHistory.resx
+++ b/DBAChecksGUI/Drives/DriveHistory.resx
@@ -117,61 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
-        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADO
-        CgAAAk1TRnQBSQFMAgEBAwIAAQIBAAECARABAAEQAQAE/wEZAQAI/wFCAU0BNgcAATYDAAEoAwABQAMA
-        ARADAAEBAQABGAYAAQweAAP0EvYD8w8AA/En9g8AA/QS9gPzRQAD9QHnAegB9QEAARQB5QEAARQB5QEA
-        ARQB5QEAARQB5QEAARQB5QEAARQB5QFcAWkB6wP2A/UGAAPxA/YBAAHMAf8BAAHMAf8BAAHMAf8BAAHM
-        Af8BAAHMAf8BAAHMAf8BAAHMAf8BAAHMAf8BAAHMAf8BAAHMAf8BAAHMAf8BAAHMAf8BXAHcAfwD9gkA
-        A/UB6gHwAeoBMwGZAjMBmQIzAZkCMwGZAjMBmQIzAZkBMwF8AbwBfAP2A/U8AAP2AWwBdwHsAQABFAHl
-        AQABFAHlAQABFAHlAQABFAHlAQABFAHlAQABFAHlAQABFAHlAQABFAHlAQABFAHlA/YD9QMAA/QBuQHs
-        AfgBAAHMAf8BAAHMAf8BAAHMAf8BAAHMAf8BAAHMAf8BAAFmAYAEAAHMAf8BAAHMAf8BAAHMAf8BAAHM
-        Af8BAAHMAf8BAAHMAf8D9gYAA/YBiAHCAYgBMwGZAjMBmQIzAZkCMwGZAjMBmQIzAZkCMwGZAjMBmQIz
-        AZkBMwP2A/U2AAPyAakBrwHxAQABFAHlAQABFAHlAWABbAHvAQABFAHlAQABFAHlAQABFAHlAQABFAHl
-        AQABFAHlAQABFAHlAQABFAHlAQABFAHlA/YGAAP2AQABzAH/AQABzAH/AQABzAH/AQABzAH/AQABzAH/
-        BwABzAH/AQABzAH/AQABzAH/AQABzAH/AQABzAH/AbkB7AH4A/QDAAPyAbkB2QG5ATMBmQIzAZkBMwGA
-        Ab8BgAb/ATMBmQIzAZkCMwGZAjMBmQIzAZkCMwGZATMD9jYAA/YBAAEUAeUBAAEUAeUBnwGnAfUD/wGf
-        AacB9QEAARQB5QEAARQB5QEAARQB5Qb/AQABFAHlAQABFAHlAVwBaQHrA/MDAAP0AbkB7AH4AQABzAH/
-        AQABzAH/AQABzAH/AQABzAH/AQABzAH/AQABzAH/AQABzAH/AQABzAH/AQABzAH/AQABzAH/AQABzAH/
-        A/YGAAP2ATMBmQIzAZkCMwGZATMJ/wGAAb8BgAEzAZkCMwGZAjMBmQIzAZkCMwGZATMBfAG8AXwD8zAA
-        A/EBigGTAe8BAAEUAeUBAAEUAeUBnwGnAfUG/wGfAacB9QEAARQB5Qn/AQABFAHlAQABFAHlAQABFAHl
-        A/YGAAP2AQABzAH/AQABzAH/AQABzAH/AQABzAH/BwABzAH/AQABzAH/AQABzAH/AQABzAH/AbkB7AH4
-        A/QDAAPxAaEBzQGhATMBmQIzAZkBMwGAAb8BgAP/AeYB8gHmBv8BMwGZAjMBmQIzAZkCMwGZAjMBmQIz
-        AZkBMwP2MAAD9gEPASIB5gEAARQB5QEAARQB5QEAARQB5QGfAacB9Q//AQABFAHlAQABFAHlAQABFAHl
-        AQABFAHlA/YGAAP0AbkB7AH4AQABzAH/AQABzAH/AQABzAH/BwABzAH/AQABzAH/AQABzAH/AQABzAH/
-        A/YGAAP2AT8BnwE/ATMBmQIzAZkBMwb/ATMBmQEzAeYB8gHmA/8BgAG/AYABMwGZAjMBmQIzAZkCMwGZ
-        AjMBmQEzA/YwAAP2AQABFAHlAQABFAHlAQABFAHlAQABFAHlAQABFAHlAZ8BpwH1Cf8BAAEUAeUBAAEU
-        AeUBAAEUAeUBAAEUAeUBAAEUAeUD9gkAA/YBAAHMAf8BAAHMAf8BAAHMAf8HAAHMAf8BAAHMAf8BAAHM
-        Af8BuQHsAfgD9AYAA/YBMwGZAjMBmQIzAZkCMwGZAjMBmQIzAZkCMwGZATMG/wEzAZkCMwGZAjMBmQIz
-        AZkCMwGZATMD9jAAA/YBAAEUAeUBAAEUAeUBAAEUAeUBAAEUAeUBAAEUAeUM/wGfAacB9QEAARQB5QEA
-        ARQB5QEAARQB5QEAARQB5QP2CQAD9AGpAekB+QEAAcwB/wEAAcwB/wcAAcwB/wEAAcwB/wEAAcwB/wP2
-        CQAD9gEzAZkCMwGZAjMBmQIzAZkCMwGZAjMBmQIzAZkBMwHmAfIB5gP/AYABvwGAATMBmQIzAZkCMwGZ
-        AjMBmQEzA/YwAAPyAU0BWwHqAQABFAHlAQABFAHlAQABFAHlCf8BnwGnAfUG/wGfAacB9QEAARQB5QEA
-        ARQB5QEAARQB5QP2DAAD9gEAAcwB/wEAAcwB/wcAAcwB/wEAAcwB/wGaAeYB+QP0CQAD8gFwAbYBcAEz
-        AZkCMwGZAjMBmQIzAZkCMwGZAjMBmQIzAZkBMwb/ATMBmQIzAZkCMwGZAjMBmQEzA/YwAAP4AecB6AH1
-        AQABFAHlAQABFAHlCf8BAAEUAeUBAAEUAeUBnwGnAfUG/wFgAWwB7wEAARQB5QEAARQB5QP2DAAD9AGa
-        AeYB+QEAAcwB/wcAAcwB/wEAAcwB/wP2DAAD+AHqAfAB6gEzAZkCMwGZAjMBmQIzAZkCMwGZAjMBmQIz
-        AZkBMwHmAfIB5gP/AYABvwGAATMBmQIzAZkCMwGZATMD9jMAA/YBDwEiAeYBAAEUAeUBAAEUAeUD/wEA
-        ARQB5QEAARQB5QEAARQB5QEAARQB5QGfAacB9QGfAacB9QEAARQB5QEAARQB5QHnAegB9QP0DwAD9gEA
-        AcwB/wEAAcwB/wEAAcwB/wEAAcwB/wGaAeYB+QP0DwAD9gE/AZ8BPwEzAZkCMwGZAjMBmQIzAZkCMwGZ
-        AjMBmQIzAZkBMwb/ATMBmQIzAZkBMwHqAfAB6gP0MwAD+gP2AQABFAHlAQABFAHlAQABFAHlAQABFAHl
-        AQABFAHlAQABFAHlAQABFAHlAQABFAHlAQABFAHlAQABFAHlAWwBdwHsA/USAAP0AZoB5gH5AQABzAH/
-        AQABzAH/AQABzAH/A/YSAAP6A/YBMwGZAjMBmQIzAZkCMwGZAjMBmQIzAZkCMwGZAjMBmQIzAZkCMwGZ
-        ATMBiAHCAYgD9TkAA/QD9gEPASIB5gEAARQB5QEAARQB5QEAARQB5QEAARQB5QEAARQB5QEAARQB5QEA
-        ARQB5QGpAa8B8QP2GAAD9gEAAcwB/wEAAcwB/wGaAeYB+QP0FQAD9AP2AT8BnwE/ATMBmQIzAZkCMwGZ
-        AjMBmQIzAZkCMwGZAjMBmQEzAbkB2QG5A/Y/AAP6A/YB5wHoAfUBTQFbAeoBAAEUAeUBAAEUAeUBDwEi
-        AeYBigGTAe8D9gPyGwAD9AGaAeYB+QEAAcwB/wP2GwAD+gP2AeoB8AHqAXABtgFwATMBmQIzAZkBMwE/
-        AZ8BPwGhAc0BoQP2A/JIAAP4A/IJ9gPxJAAG9gP0IQAD+APyCfYD8T8AAUIBTQE+BwABPgMAASgDAAFA
-        AwABEAMAAQEBAAEBBQABgBcAA/8BAAHwAQ8BgAEBAfABDwIAAeABAwIAAeABAwIAAcABAQIAAcABAQIA
-        AYABAQGAAQABgAEBAgABgAEAAYABAQGABQABwAEBBgABwAEDBgAB4AEDBgAB4AEHBgAB8AEHBgAB8AEP
-        BAABgAEAAfgBDwGAAwABgAEBAfgBHwGAAQECAAHAAQMB/AEfAcABAwIAAeABBwH8AT8B4AEHAgAB+AEf
-        Af4BPwH4AR8CAAs=
-</value>
-  </data>
 </root>
