--- a/DBAChecks/Properties/Resources.resx
+++ b/DBAChecks/Properties/Resources.resx
@@ -640,7 +640,7 @@ database_id INT,
 file_id INT,
 data_space_id INT,
 name SYSNAME,
-filegroup_name SYSNAME,
+filegroup_name SYSNAME NULL,
 physical_name nvarchar(260),
 type TINYINT,
 size bigint,
@@ -671,7 +671,7 @@ DB_ID() database_id,
 file_id,
 f.data_space_id,
 f.name,
-isnull(fg.name,''LOG'') as filegroup_name,
+CASE WHEN f.type=1 THEN ''LOG'' ELSE ISNULL(fg.name,f.name) END as filegroup_name,
 f.physical_name,
 f.type,
 f.size,
@@ -733,7 +733,7 @@ BEGIN
 			file_id,
 			data_space_id,
 			name,
-			NULL AS filegroup_name,
+			CASE WHEN type=1 THEN 'LOG' ELSE NULL END AS filegroup_name,
 			physical_name,
 			type,
 			CASE WHEN mf.state=3 THEN 0 ELSE size END,
