--- a/DBAChecks/Properties/Resources.resx
+++ b/DBAChecks/Properties/Resources.resx
@@ -1172,7 +1172,8 @@ WHERE database_id = DB_ID()</value>
        max_session_percent,
        elastic_pool_dtu_limit,
        elastic_pool_storage_limit_mb,
-       avg_allocated_storage_percent
+       avg_allocated_storage_percent,
+       elastic_pool_cpu_limit
 FROM sys.elastic_pool_resource_stats 
 WHERE start_time&gt;=@Date</value>
   </data>
