Blocking Viewer improvements
Added hyperlink to view text in code viewer

--- a/DBAChecksGUI/Performance/BlockingViewer.resx
+++ b/DBAChecksGUI/Performance/BlockingViewer.resx
@@ -150,4 +150,29 @@
   <metadata name="Txt.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAAMMOAADDDgAAAAAAAAAA
+        AAAAAAAAAAAAAPb29v/29vb/9vb2//b29v8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAD29vb/QkJC/0JCQv/29vb/9vb2//b29v8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA9vb2/0JCQv9CQkL/QkJC/0JCQv/29vb/AAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAPb29v9CQkL/QkJC//b29v/29vb/9vb2/wAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD29vb/QkJC/0JCQv9CQkL/QkJC//b29v8AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA9vb2/0JCQv9CQkL/9vb2//b29v/29vb/9vb2//b2
+        9v/29vb/9vb2//b29v/29vb/9vb2//b29v8AAAAA9fX1UPb29v9CQkL/QkJC//b29v9NTU3/QkJC/0JC
+        Qv9CQkL/QkJC/0JCQv9CQkL/QkJC/0JCQv/29vb/9fX1UOvr6/9vb2//QkJC/0JCQv9vb2//9vb2//Hv
+        8P9CQkL/8e/w//Hv8P9CQkL/8e/w//Hv8P9CQkL/9vb2//Pz899vb2//QkJC/0JCQv9CQkL/QkJC/29v
+        b//29vb/QkJC/0JCQv9CQkL/QkJC/0JCQv9CQkL/QkJC//b29v/29vb/QkJC/0JCQv/m5OX/5uTl/0JC
+        Qv9CQkL/9vb2/0JCQv/x7/D/8e/w/0JCQv/x7/D/8e/w/0JCQv/29vb/9vb2/0JCQv9CQkL/5uTl/+bk
+        5f9CQkL/QkJC//b29v9CQkL/QkJC/0JCQv9CQkL/QkJC/0JCQv9CQkL/9vb2//Pz899vb2//QkJC/0JC
+        Qv9CQkL/QkJC/29vb//29vb/QkJC//Hv8P/x7/D/QkJC//Hv8P/x7/D/QkJC//b29v/19fVQ6+vr/29v
+        b/9CQkL/QkJC/29vb//29vb/TU1N/0JCQv9CQkL/QkJC/0JCQv9CQkL/QkJC/0JCQv/29vb/AAAAAPX1
+        9VDz8/Pf9vb2//b29v/29vb/TU1N/0JCQv9CQkL/QkJC/0JCQv9CQkL/QkJC/0JCQv9CQkL/9vb2/wAA
+        AAAAAAAAAAAAAAAAAAD29vb/QkJC/0JCQv9CQkL/QkJC/0JCQv9CQkL/QkJC/0JCQv9CQkL/QkJC//b2
+        9v8AAAAAAAAAAAAAAAAAAAAA9vb2//b29v/29vb/9vb2//b29v/29vb/9vb2//b29v/29vb/9vb2//b2
+        9v/29vb/w/8AAMD/AADA/wAAwP8AAMD/AADAAAAAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIAA
+        AADwAAAA8AAAAA==
+</value>
+  </data>
 </root>
