LastGoodDBCC collection fix
Can get dupe rows from DBCC DBINFO on older SQL versions - observed on 2008 & 2008R2.  Added TOP(1) to prevent PK error.

--- a/DBADash/Properties/Resources.resx
+++ b/DBADash/Properties/Resources.resx
@@ -1462,7 +1462,7 @@ BEGIN
 		EXEC  (	@SQL )
 
 		INSERT INTO @LastGoodDBCC(database_id,LastGoodCheckDbTime)
-		SELECT @DBID, CAST(Value as DATETIME)
+		SELECT TOP(1) @DBID, CAST(Value as DATETIME)
 		FROM @dbinfo
 		WHERE Field = 'dbi_dbccLastKnownGood'
 
